# Mingk42-movie

./: README.md  pyproject.toml
src/movie/: cli.py
src/movie/api/: call.py
tests/: .test_call.py.swp  test_call.py
