[project]
name = "movie"
version = "0.2.0"
description = "영화진흥위원회 영화순위 데이터 처리"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = []
requires-python = ">3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mov-ping="movie.cli:ping"

[project.urls]
github="https://github.com/Mingk42/-Mingk42-movie"
issue="https://github.com/Mingk42/-Mingk42-movie/issues"

[tool.pdm]
distribution = false
