[project]
name = "movie"
version = "0.2.5"
description = "영화진흥위원회 영화순위 데이터 처리"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.0.3",
    "pyarrow>=17.0.0",
]
requires-python = ">3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mov-ping="movie.cli:ping"

[project.urls]
github="https://github.com/Mingk42/-Mingk42-movie"
issue="https://github.com/Mingk42/-Mingk42-movie/issues"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]


[tool.pytest.ini_options]
pythonpath=["src"]
